@startuml Foco

class Usuario

class Foco{
- EstadoFoco estado
+ Encender()
+ Apagar ()
+ LeerEstado() : EstadoFoco
}

class EstadoFoco
class SerieFocos{
    - Foco focos[10]
    + MostrarFocos()
    + EncenderFcoso()
    + ApagarFocos()
}

Usuario o-- Foco
Foco *-- EstadoFoco
SerieFocos "1" *-- "10" Foco
EstadoFoco --|> Texto 
Usuario o-- SerieFocos

@endluml